docs/apim/4.6/getting-started/integrations.md
---
description: >-
  Learn more about how Gravitee integrates with your larger technological
  ecosystem
---

# Integrations

## Overview

The tables below summarize major integrations that Gravitee API Management (APIM) offers with other enterprise tooling.

## Event brokers

<table><thead><tr><th width="155.05882352941177">Event broker</th><th width="295">Integration description</th><th>Plugin or add-on required</th></tr></thead><tbody><tr><td>Kafka</td><td>Gravitee can expose backend Kafka data sources as supported client-side APIs.</td><td><ul><li>Gateway Kafka Endpoint Connector</li></ul></td></tr><tr><td>Confluent</td><td>Gravitee can expose backend Confluent data sources as supported client-side APIs. Gravitee also supports Confluent Schema registry as a schema validation resource.</td><td><ul><li>Gateway Kafka Endpoint Connector</li><li>Various serialization and deserialization policies</li></ul></td></tr><tr><td>Solace</td><td>Gravitee can expose backend Solace event APIs as supported client-side APIs. Gravitee can also auto-import Solace event APIs.</td><td><ul><li>Management Solace Sync Service plugin</li><li>Gateway Solace Endpoint Connector</li></ul></td></tr><tr><td>HiveMQ</td><td>Gravitee can expose backend MQTT data sources as supported client-side APIs.</td><td><ul><li>Gateway MQTT Endpoint Connector</li></ul></td></tr><tr><td>Mosquito</td><td>Gravitee can expose backend MQTT data sources as supported client-side APIs.</td><td><ul><li>Gateway MQTT Endpoint Connector</li></ul></td></tr><tr><td>Other MQTT broker running MQTT 5</td><td>Gravitee can expose backend MQTT data sources as supported client-side APIs.</td><td><ul><li>Gateway MQTT Endpoint Connector</li></ul></td></tr></tbody></table>

## APM and observability

<table><thead><tr><th width="196.05882352941177">Monitoring solution</th><th>Integration description</th><th>Plugin or add-on required</th></tr></thead><tbody><tr><td>Splunk</td><td>Gravitee can push API metrics and monitoring data to Splunk for visualization in Splunk dashboards.</td><td><ul><li>File reporter plugin</li></ul></td></tr><tr><td>Datadog</td><td>Gravitee can push API metrics and monitoring data to Datadog for visualization in Datadog dashboards.</td><td><ul><li>Datadog reporter plugin</li><li>File reporter plugin (less advanced version)</li></ul></td></tr><tr><td>Dynatrace</td><td>Gravitee can push API metrics and monitoring data to Dynatrace for visualization in Dynatrace dashboards.</td><td><ul><li>File reporter plugin</li></ul></td></tr></tbody></table>

## Service discovery

<table><thead><tr><th width="144">Solution</th><th>Integration description</th><th>Plugin or add-on required</th></tr></thead><tbody><tr><td>HashiCorp Consul</td><td>Bind the backend endpoints of your API so that API requests are always routed to the proper, healthy backend service dynamically managed by HashiCorp Consul.</td><td><ul><li>Gravitee service discovery consul plugin</li></ul></td></tr></tbody></table>

## API documentation

<table><thead><tr><th width="147.05882352941177">Solution</th><th>Integration description</th><th>Plugin or add-on required</th></tr></thead><tbody><tr><td>Bitbucket</td><td>Fetch content from a Bitbucket repository. Primarily used to fetch documentation.</td><td><ul><li>Bitbucket fetcher plugin</li></ul></td></tr><tr><td>Git</td><td>Fetch content from a Git repository. Primarily used to fetch documentation.</td><td><ul><li>GIT fetcher plugin</li></ul></td></tr><tr><td>GitHub</td><td>Fetch content from a GitHub repository. Primarily used to fetch documentation.</td><td><ul><li>GitHub fetcher plugin</li></ul></td></tr><tr><td>GitLab</td><td>Fetch content from a GitLab repository. Primarily used to fetch documentation.</td><td><ul><li>GitLab fetcher plugin</li></ul></td></tr></tbody></table>

## Authentication and authorization

<table><thead><tr><th width="197.12861736334403">Solution</th><th width="249">Integration description</th><th>Plugin or add-on required</th></tr></thead><tbody><tr><td>Gravitee Access Management</td><td>A Gravitee Access Management resource is defined to introspect an access_token generated by a Gravitee Access Management instance.</td><td><ul><li>Gravitee.io Access Management Resource plugin</li></ul></td></tr><tr><td>Keycloak</td><td>A Keycloak adapter resource is defined to introspect an access token provided by Keycloak.</td><td><ul><li>Keycloak Adapter Resource plugin</li></ul></td></tr><tr><td>OAuth2 authorization servers</td><td>A Generic OAuth2 Authorization Server resource is defined to introspect an access_token generated by a generic OAuth2 authorization server.</td><td><ul><li>Generic OAuth2 Authorization Server Resource</li></ul></td></tr><tr><td>LDAP authentication provider</td><td>A Gravitee LDAP Authentication Provider resource is used to validate a user’s credentials against an LDAP server.</td><td><ul><li>LDAP Authentication Provider plugin</li></ul></td></tr><tr><td>HTTP Authentication provider</td><td>Set up an HTTP authentication provider resource.</td><td><ul><li>HTTP Authentication Provider plugin</li></ul></td></tr><tr><td>Inline authentication</td><td>Set up an inline authentication provider resource (i.e., bring your own users)</td><td><ul><li>Inline Authentication Provider plugin</li></ul></td></tr></tbody></table>

## Cache

<table><thead><tr><th width="157.05882352941177">Solution</th><th width="295">Integration description</th><th>Plugin or add-on required</th></tr></thead><tbody><tr><td>Redis</td><td>The Redis cache resource is used to maintain a cache and link it to the API lifecycle. The cache is initialized when the API is started and released when the API is stopped.</td><td><ul><li>Redis Cache Resource plugin</li></ul></td></tr><tr><td>In-memory cache solution</td><td>The cache resource is used to maintain a cache and link it to the API lifecycle. The cache is initialized when the API is started and released when the API is stopped. This cache is responsible for storing HTTP responses from the backend to avoid subsequent calls.</td><td><ul><li>Cache resource</li></ul></td></tr></tbody></table>

## Custom backend integrations

Flexible API and protocol support enables you to integrate Gravitee with any backend system that can communicate over:

* SOAP
* REST
* WebSocket
* gRPC

{% hint style="info" %}
**For example: Salesforce**

Gravitee can be used for custom Salesforce integration use cases because Salesforce provides streaming APIs. For more information, [book a demo with one of our Solutions Engineers](https://www.gravitee.io/demo).
{% endhint %}

## Secret provider plugins

Secret providers are generic, configurable, and autonomous clients that manage connections, retries, and credentials renewal when connecting to secret managers. The following `secret-provider` plugins are available for Gravitee Gateway, Management API, and Access Management:

* `kubernetes`: A Community Edition plugin that fetches secret and TLS pairs from Kubernetes.io
* `vault`: An Enterprise Edition plugin that uses the Key/Value engine of HashiCorp Vault
* `aws` : An Enterprise Edition plugin that uses AWS Secret Manager

{% hint style="warning" %}
To learn more about Gravitee [Enterprise Edition](../overview/enterprise-edition.md) and what's included in various enterprise packages, please:

* [Book a demo](https://app.gitbook.com/o/8qli0UVuPJ39JJdq9ebZ/s/rYZ7tzkLjFVST6ex6Jid/)
* [Check out the pricing page](https://www.gravitee.io/pricing)
{% endhint %}

The following table shows which features have been implemented for each of these plugins:

<table><thead><tr><th width="173">Feature</th><th>kubernetes</th><th>vault</th><th>aws</th></tr></thead><tbody><tr><td>Resolve a secret</td><td>Yes</td><td>Yes</td><td>Yes</td></tr><tr><td>Watch a secret</td><td>Yes</td><td>Yes (via polling)</td><td>No</td></tr><tr><td>Secret format</td><td>All K8s types (TLS, generic, etc.)</td><td><p>Key/Value engine v1 or v2</p><p>(no mixing)</p></td><td>Key/value as in AWS UI</td></tr><tr><td>TLS</td><td>Yes</td><td>Yes, but not with PKI engine</td><td>Yes, but no renewal</td></tr><tr><td>Client</td><td>in-house</td><td>Lean and community- based</td><td>AWS-SDK based</td></tr><tr><td>Zip size</td><td>11KB</td><td>161KB</td><td>8.9MB (not included in base image)</td></tr></tbody></table>

For more information about Secret Providers, see [Broken link](broken-reference "mention").

### Known limitations

Current limitations are summarized below:

* Only the `http.ssl.keystore.secret` x.509 pairs (whether format is PEM ot KeyStore) can be watched and therefore hot-reloaded.
* Only system environment variables and `gravitee.yml` properties can be resolved into secrets. A secret URL cannot be set via JVM properties, e.g.:\
  `-Dsystem.proxy.password=secret://kubernetes/giosecrets:proxypass` cannot be used. The parameters are passed directly to the platform without parsing and will not be detected by a `secret provider` plugin.
* The `vault` plugin watches via polling because Vault events is an unstable feature.&#x20;
* The `aws`plugin does not support watch. Used in configuration, it will resolve a secret only once.
